--- a/viridian/algae/docker/compose.standalone.yml
+++ b/viridian/algae/docker/compose.standalone.yml
@@ -2,7 +2,7 @@ name: seaside-algae-standalone
 
 services:
   int-router:
-    container_name: seaside-internal-router
+    container_name: seaside-router-standalone-internal
     extends:
       file: compose.base.yml
       service: router
@@ -16,7 +16,7 @@ services:
         ipv4_address: 10.87.82.100
 
   whirlpool:
-    image: seaside-whirlpool-reef
+    image: seaside-whirlpool-standalone
     extends:
       file: compose.base.yml
       service: whirlpool
@@ -26,6 +26,7 @@ services:
         SEASIDE_ADDRESS: 10.87.82.87
     environment:
       SEASIDE_LOG_LEVEL: DEBUG
+      SEASIDE_EXTERNAL: 10.87.42.87
     networks:
       sea-rout-int:
         ipv4_address: 10.87.82.87
@@ -40,7 +41,7 @@ services:
         condition: service_healthy
 
   ext-router:
-    container_name: seaside-external-router
+    container_name: seaside-router-standalone-external
     extends:
       file: compose.base.yml
       service: router
