--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -29,6 +29,7 @@ tun = { version = "^0.7.1", features = ["async"] }
 tonic = { version = "^0.13.1", features = ["tls-webpki-roots"] }
 tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
 async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
+url = "^2.5.4"
 structopt = { version = "^0.3.26", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
