--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -192,7 +192,7 @@ jobs:
         working-directory: viridian/algae
         env:
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
-        run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+        run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}" || docker compose -f docker/compose.standalone.yml logs whirlpool
 
       - name: Test Viridian Reef TYPHOON (integration) 🧪
         if: runner.os != 'Windows'
