--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -10,36 +10,37 @@ authors = [
 
 
 [dependencies]
+async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
 base64 = "^0.22.1"
-rand = "^0.8.5"
-log = "^0.4.22"
-env_logger = "^0.11.5"
+bincode = "^2.0.1"
+blake2 = "^0.10.6"
+byte-pool = "^0.2.4"
+bytes = "^1.10.1"
 chacha20poly1305 = "^0.10.1"
-simple-error = "^0.3.1"
+env_logger = "^0.11.5"
 futures = "^0.3.31"
 ipnet = "^2.10.1"
-bincode = "^2.0.1"
-byte-pool = "^0.2.4"
-socket2 = "^0.5.9"
-num_enum = "^0.7.3"
 lazy_static = "^1.5.0"
-blake2 = "^0.10.6"
-x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
-tun = { version = "^0.7.1", features = ["async"] }
-tonic = { version = "^0.13.1", features = ["tls-webpki-roots"] }
-tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
-async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
-url = "^2.5.4"
+log = "^0.4.22"
+num_enum = "^0.7.3"
+rand = "^0.8.5"
+simple-error = "^0.3.1"
+socket2 = "^0.5.9"
 structopt = { version = "^0.3.26", optional = true }
+tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
+tonic = { version = "^0.13.1" }
+tun = { version = "^0.7.1", features = ["async"] }
+url = "^2.5.4"
+x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 neli = "^0.6.4"
 nftables = "^0.5.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
+etherparse = { version = "^0.18.0" }
 windivert = { version = "^0.6.0", features = ["static"] }
 windows = { version = "^0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
-etherparse = { version = "^0.18.0" }
 
 [dev-dependencies]
 regex = "^1.11.1"
