--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,8 @@ jobs:
           pip3 install poetry poethepoet[poetry_plugin]
           poetry install --extras "client devel"
 
-      - name: Prepare Host
+      - name: Start Background Server
+        id: start-background-server
         working-directory: .github/scripts
         run: sudo npm run configure-viridian-test
 
@@ -114,6 +115,11 @@ jobs:
         if: runner.os != 'Windows' && failure() && (steps.test-viridian-algae-port.outcome == 'failure' || steps.test-viridian-algae-typhoon.outcome == 'failure')
         working-directory: viridian/algae
         run: docker compose -f docker/compose.standalone.yml logs whirlpool
+
+      - name: Terminate Background Server
+        if: steps.start-background-server.outcome == 'success'
+        working-directory: .github/scripts
+        run: sudo npm run configure-viridian-test -- -r
 
   viridian-reef-test:
     name: Test Viridian Reef
@@ -166,7 +172,8 @@ jobs:
         working-directory: viridian/reef
         run: ${{ env.SUDO }} cargo test --package SeasideVPN-Reef --lib -- --nocapture --show-output
 
-      - name: Prepare Host
+      - name: Start Background Server
+        id: start-background-server
         if: runner.os != 'Windows'
         working-directory: .github/scripts
         run: ${{ env.SUDO }} npm run configure-viridian-test
@@ -214,6 +221,11 @@ jobs:
         if: runner.os != 'Windows' && failure() && (steps.test-viridian-reef-port.outcome == 'failure' || steps.test-viridian-reef-typhoon.outcome == 'failure')
         working-directory: viridian/algae
         run: docker compose -f docker/compose.standalone.yml logs whirlpool
+
+      - name: Terminate Background Server
+        if: steps.start-background-server.outcome == 'success'
+        working-directory: .github/scripts
+        run: ${{ env.SUDO }} npm run configure-viridian-test -- -r
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
