--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,9 +79,7 @@ jobs:
       - name: Start Background Server
         id: start-background-server
         working-directory: .github/scripts
-        run: |
-          sudo iptables -V
-          sudo npm run configure-viridian-test
+        run: sudo npm run configure-viridian-test
 
       - name: Load .ENV File
         uses: aarcangeli/load-dotenv@v1
@@ -106,7 +104,7 @@ jobs:
       - name: Test Viridian Algae PORT (standalone) 🧪
         id: test-viridian-algae-port
         working-directory: viridian/algae
-        run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
+        run: sudo -E env "PATH=$PATH" poetry poe client -s port -l "${{ env.WHIRLPOOL_LINK }}" -e "nft list ruleset"
 
       - name: Test Viridian Algae TYPHOON (standalone) 🧪
         id: test-viridian-algae-typhoon
