--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -11,6 +11,7 @@ authors = [
 
 [dependencies]
 async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
+async-trait = "^0.1.88"
 base64 = "^0.22.1"
 bincode = "^2.0.1"
 blake2 = "^0.10.6"
@@ -28,7 +29,6 @@ simple-error = "^0.3.1"
 socket2 = "^0.5.9"
 structopt = { version = "^0.3.26", optional = true }
 tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
-tonic = { version = "^0.13.1" }
 tun = { version = "^0.7.1", features = ["async"] }
 url = "^2.5.4"
 x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
