--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -21,6 +21,7 @@ chacha20poly1305 = "^0.10.1"
 env_logger = "^0.11.5"
 futures = "^0.3.31"
 ipnet = "^2.10.1"
+iptables = "^0.5.1"
 lazy_static = "^1.5.0"
 log = "^0.4.22"
 num_enum = "^0.7.3"
