--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,6 +214,7 @@ jobs:
         if: runner.os != 'Windows'
         working-directory: viridian/algae
         env:
+          RUST_BACKTRACE: full
           SEASIDE_LOG_LEVEL: reeflib=DEBUG,INFO
         run: ${{ env.SUDO }} ${{ env.RUNNER_COMMAND }} -- -s typhoon -l "${{ env.WHIRLPOOL_LINK }}" -e "${{ env.TEST_COMMAND }}"
 
