docker compose plugin added

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,6 +147,7 @@ jobs:
           distribution: Ubuntu-24.04
           additional-packages:
             podman
+            docker-compose-plugin
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
