--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,7 +146,7 @@ jobs:
         with:
           distribution: Ubuntu-24.04
           additional-packages:
-            podman-docker
+            podman
             podman-compose
 
       - name: Install NodeJS 🪢
