--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -145,7 +145,9 @@ jobs:
         uses: Vampire/setup-wsl@v5
         with:
           distribution: Ubuntu-24.04
-          wsl-shell-command: curl -fsSL https://get.docker.com | sudo sh
+          wsl-conf: |
+            [boot]
+            command = "curl -fsSL https://get.docker.com | sudo sh"
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
