WSL configuration step added

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -145,9 +145,11 @@ jobs:
         uses: Vampire/setup-wsl@v5
         with:
           distribution: Ubuntu-24.04
-          wsl-conf: |
-            [boot]
-            command = "curl -fsSL https://get.docker.com | sudo sh"
+      
+      - name: Configure WSL
+        if: runner.os == 'Windows'
+        shell: wsl-bash -u root {0}
+        run: curl -fsSL https://get.docker.com | sudo sh
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
