--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -150,7 +150,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           wsl -u root hostname -I
-          $ip = wsl -u root hostname -I
+          $ip = (wsl -u root hostname -I).Split()[0].Trim()
           ping -n 5 $ip
       
       - name: Configure WSL
