--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -162,6 +162,13 @@ jobs:
         shell: wsl-bash -u root {0}
         run: curl -fsSL https://get.docker.com | sudo sh
 
+      - name: TEST STEP
+        if: runner.os == 'Windows'
+        run: |
+          $ip = (wsl -u root hostname -I).Split()[0].Trim()
+          powershell -Command "Get-NetIPConfiguration | Where-Object { `$_.IPv4Address.IPAddress -eq $ip } | Select-Object InterfaceIndex"
+          ping -n 5 $ip
+
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
         with:
@@ -202,8 +209,8 @@ jobs:
       - name: TEST STEP
         if: runner.os == 'Windows'
         run: |
-          powershell -Command "Get-NetIPConfiguration | Where-Object { `$_.IPv4Address.IPAddress -eq ${gatewayIP} } | Select-Object InterfaceIndex"
           $ip = (wsl -u root hostname -I).Split()[0].Trim()
+          powershell -Command "Get-NetIPConfiguration | Where-Object { `$_.IPv4Address.IPAddress -eq $ip } | Select-Object InterfaceIndex"
           ping -n 5 $ip
           ping -n 5 10.87.82.87
           ping -n 5 10.42.0.42
