--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -160,7 +160,9 @@ jobs:
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
         shell: wsl-bash -u root {0}
-        run: curl -fsSL https://get.docker.com | sudo sh
+        run: |
+          curl -fsSL https://get.docker.com | sudo sh
+          sysctl -w net.ipv4.ip_forward=1
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
