--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -128,6 +128,7 @@ jobs:
       SUDO: ${{ matrix.os == 'ubuntu' && 'sudo -E env "PATH=$PATH"' || '' }}
       TEST_TIMEOUT: 15.0
       LOCAL_ADDRESS: 10.82.0.1
+      SEASIDE_ADDRESS: 10.87.82.87
       ECHO_ADDRESS: 10.42.0.42
       RUNNER_COMMAND: cargo run --features cli-exec --bin cli --manifest-path ../reef/Cargo.toml
       TEST_COMMAND: poetry run pytest --log-cli-level=INFO tests/test_local.py
@@ -163,6 +164,8 @@ jobs:
         run: |
           curl -fsSL https://get.docker.com | sudo sh
           sysctl -w net.ipv4.ip_forward=1
+          iptables -t filter -A FORWARD -i eth0 -d ${{ env.SEASIDE_ADDRESS }}/24 -j ACCEPT
+          iptables -t nat -A POSTROUTING -o eth0 -s ${{ env.SEASIDE_ADDRESS }}/24 -j MASQUERADE
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
@@ -205,7 +208,6 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           $ip = (wsl -u root hostname -I).Split()[0].Trim()
-          powershell -Command "Get-NetIPConfiguration | Where-Object { `$_.IPv4Address.IPAddress -eq $ip } | Select-Object InterfaceIndex"
           ping -n 5 $ip
           ping -n 5 10.87.82.87
           ping -n 5 10.42.0.42
@@ -219,7 +221,6 @@ jobs:
       - name: Get Connection Link
         working-directory: viridian/algae
         env:
-          SEASIDE_ADDRESS: 10.87.82.87
           SEASIDE_ROOT_CERTIFICATE_AUTHORITY: ${{ github.workspace }}/viridian/algae/certificates/viridian/rootCA.crt
           SEASIDE_LOG_LEVEL: ERROR
         run: |
