--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -160,12 +160,12 @@ jobs:
 
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
-        shell: wsl-bash -u root {0}
         run: |
-          curl -fsSL https://get.docker.com | sudo sh
-          sysctl -w net.ipv4.ip_forward=1
-          iptables -t filter -A FORWARD -i eth0 -d ${{ env.SEASIDE_ADDRESS }}/24 -j ACCEPT
-          iptables -t nat -A POSTROUTING -o eth0 -s ${{ env.SEASIDE_ADDRESS }}/24 -j MASQUERADE
+          wsl -u root curl -fsSL https://get.docker.com | sudo sh
+          wsl -u root sysctl -w net.ipv4.ip_forward=1
+          wsl -u root iptables -t filter -A FORWARD -i eth0 -d ${{ env.SEASIDE_ADDRESS }}/24 -j ACCEPT
+          wsl -u root iptables -t nat -A POSTROUTING -o eth0 -s ${{ env.SEASIDE_ADDRESS }}/24 -j MASQUERADE
+          (wsl -u root hostname -I).Split()[0].Trim()
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
