--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -161,8 +161,8 @@ jobs:
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
         run: |
-          wsl -u root curl -fsSL https://get.docker.com | sudo sh
           wsl -u root sysctl -w net.ipv4.ip_forward=1
+          wsl -u root bash -c "curl -fsSL https://get.docker.com | sh"
           wsl -u root iptables -t filter -A FORWARD -i eth0 -d ${{ env.SEASIDE_ADDRESS }}/24 -j ACCEPT
           wsl -u root iptables -t nat -A POSTROUTING -o eth0 -s ${{ env.SEASIDE_ADDRESS }}/24 -j MASQUERADE
           (wsl -u root hostname -I).Split()[0].Trim()
