--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -165,7 +165,14 @@ jobs:
           wsl -u root bash -c "curl -fsSL https://get.docker.com | sh"
           wsl -u root iptables -t filter -A FORWARD -i eth0 -d ${{ env.SEASIDE_ADDRESS }}/24 -j ACCEPT
           wsl -u root iptables -t nat -A POSTROUTING -o eth0 -s ${{ env.SEASIDE_ADDRESS }}/24 -j MASQUERADE
+
+      - name: TEST STEP
+        if: runner.os == 'Windows'
+        run: |
           (wsl -u root hostname -I).Split()[0].Trim()
+          wsl -u root iptables -t nat -L -v -n
+          wsl -u root iptables -t filter -L -v -n
+          wsl -u root ip addr show
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
